# scanoo-ai-executive-team

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  FAILING_TESTS_CLASSIFICATION.md  IMPROVEMENT.md  PLANS.md  PROJECT_BRIEF.md  README.md  RULES.md  RUN_THREAD101.txt  RUN_THREAD102.txt  RUN_THREAD106.txt  RUN_THREAD107.txt  RUN_THREAD108.txt  RUN_THREAD109.txt  RUN_THREAD110.txt  RUN_THREAD110_DISPATCHER.txt  RUN_THREAD110_DISPATCHER_APPLY_FIX.txt  RUN_THREAD110_DISPATCHER_CODE_FIX.txt  RUN_THREAD110_DISPATCHER_FIX.txt  RUN_THREAD110_STEP2.txt  SKILLS_RISK_GUIDE.md  TASK.md  TASK_TEMPLATE.md  TASK_THREAD102.md  TASK_THREAD104.md  THREAD_DB_ISOLATION.md  THREAD_MUTATION_UNIFICATION.md  bootstrap.sh  install_skills.sh  lark_feishu_capability_gap.md  package-lock.json  package.json  scanoo_web_backend_function_map.md  scanoo_web_iteration_planning.md
.codex-artifacts/: thread120-cloud-doc-real-name-reply.html  thread120-cloud-doc-real-name-reply.txt  thread120-cloud-doc-reply.html  thread120-cloud-doc-reply.txt  (+1 more)
.learnings/: ERRORS.md  (+1 more)
lobster_security/: .env.example  MANAGER_SUMMARY.md  README.md  pyproject.toml
lobster_security/config/: network_policy.yaml  policy.yaml
lobster_security/lobster_security/: __init__.py  approval.py  audit.py  cli.py  command_policy.py  config_loader.py  errors.py  models.py  network_guard.py  search_proxy.py  snapshot.py  workspace.py  wrapper.py  yamlish.py
lobster_security/tests/: test_audit.py  test_command_policy.py  test_network_guard.py  test_search_proxy.py  test_snapshot.py  test_workspace.py  test_wrapper.py
(+648 files in other folders)
